# WMF_heavy

./: .gitignore  README.MD  README.md  enviroment.yml  pyproject.toml  setup.py
examples/: ejemplo_morfologia.ipynb
patches/: wmfv2_autofix.patch
reports/: wmfv2_calls_report.json
tools/checks/: check_wmfv2_imports.py
wmf_heavy/: Modelos_heavy.f90  cuencas_heavy.f90  wmfv2.py
wmf_py/cu_py/: basics.py  metrics.py  streams.py
wmf_py/models_py/: core.py
wmf_py/tests/: test_cu_basics.py  test_cu_streams.py  test_io.py  test_metrics.py  test_models_core.py  test_streams.py  test_subbasins.py  test_transform.py  test_utils_transform.py
wmf_py/utils/: __init__.py  config.py  io.py  transform.py
