[tool.poetry]
name = "wmf_heavy"
version = "0.1.0"
description = "Water Model Framework (WMF) hydrological modeling package migration python 3.10"
authors = ["JulianUran uranzea@gmail.com"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/uranzea/wmf_heavy"
repository = "https://github.com/uranzea/wmf_heavy"
keywords = ["hydrology", "watershed", "gis", "modeling"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23"
pandas = "^1.5"
scipy = "^1.11"
matplotlib = "^3.7"
pyproj = "^3.5"
rasterio = {version = "^1.3", optional = true}
gdal = {version = "^3.8", optional = true}
cartopy = {version = "^0.21", optional = true}
netcdf4 = {version = "^1.6", optional = true}
deap = {version = "^1.3", optional = true}
shapely = {version = "^2.0", optional = true}
pyshp = {version = "^2.3", optional = true}

[tool.poetry.extras]
geospatial = ["rasterio", "gdal", "cartopy", "netcdf4", "shapely", "pyshp"]
calibration = ["deap"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wmf-run = "wmf.main:main"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

