[tool.poetry]
name = "wmfpy"
version = "0.1.0"
description = "Water Model Framework (WMF) hydrological modeling package migration python 3.10"
authors = ["Julian Uran <uranzea@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/uranzea/wmf_heavy"
repository = "https://github.com/uranzea/wmf_heavy"
keywords = ["hydrology", "watershed", "gis", "modeling"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24"
rasterio = "^1.3"
pandas = "^2.2"
scipy = "^1.13"
matplotlib = "^3.8"
pyproj = "^3.6"
rioxarray = "^0.15"
xarray = "^2024.6"
dask = "^2024.6"

# Extras (incluye gdal como opcional, instalar vía conda)
gdal = {version = "^3.8", optional = true}
cartopy = {version = "^0.22", optional = true}
netcdf4 = {version = "^1.6", optional = true}
deap = {version = "^1.3", optional = true}
shapely = {version = "^2.0", optional = true}
pyshp = {version = "^2.3", optional = true}

[tool.poetry.extras]
geospatial = ["gdal", "cartopy", "netcdf4", "shapely", "pyshp"]
calibration = ["deap"]

[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[tool.poetry.scripts]
wmf-run = "wmf.main:main"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"


